<resources>
    <string name="app_name">DopaPills</string>
    <string name="connexion">Connexion</string>
    <string name="seconnecter">Se connecter</string>
    <string name="mdpoublie">Mot de passe oublié ?</string>
    <string name="votremdp">Votre mot de passe</string>
    <string name="votremail">Votre adresse e-mail</string>
    <string name="annuler">Annuler</string>
    <string name="sinscrire">Inscrivez-vous</string>
    <string name="boutonsinscrire">Valider mon inscription</string>
    <string name="et_pseudo">Votre pseudo</string>
    <string name="et_email">Votre adresse e-mail</string>
    <string name="mdp">Votre mot de passe</string>
    <string name="mdpconfirmer">Confirmez votre mot de passe</string>
    <string name="creercompte">Créer un compte</string>
    <string name="vosid">Vos identifiants</string>
    <string name="suivant">Suivant</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="votrenom">Votre nom</string>
    <string name="votreprenom">Votre prénom</string>
    <string name="vousetes">Vous êtes</string>
    <string name="profilvalide">Profil validé!</string>
    <string name="installerunemontre">Installer une montre</string>
    <string name="ignoreretape">Ignorer cette étape</string>
    <string name="montre">Image de la montre</string>
    <string name="activerbluetooth">Veuillez activer votre Bluetooth</string>
    <string name="montreajoutee">Montre ajoutée avec succès!</string>
    <string name="registration_success">Votre compte a bien été créé !</string>
    <string name="registration_failed">Echec enregistrement</string>
    <string name="modif_success">Modification réussie</string>
    <string name="modif_failed">Echec modification</string>
    <string name="un_homme">Un homme</string>
    <string name="une_femme">Une femme</string>
    <string name="votre_age">Votre âge</string>
    <string name="votre_poids">Votre poids (en kg)</string>
    <string name="votre_taille">Votre taille (en cm)</string>
    <string name="acceuil_navbar" >Accueil</string>
    <string name="profil_navbar" >Mon profil</string>
    <string name="evolution_navbar" >Mon evolution</string>
    <string name="eval_navbar" >Auto-evaluation</string>
    <string name="reseau_navbar" >Mon réseau</string>
    <string name="identifiants_de_compte">Identifiants du compte</string>
    <string name="donn_es_de_sant">Données de santé</string>
    <string name="vos_m_dicaments">Vos médicaments</string>
    <string name="vos_m_decins">Vos médecins</string>
    <string name="supprimer_votre_compte">Supprimer votre compte</string>
    <string name="identifiants_du_compte">Identifiants du compte</string>
    <string name="votre_nom">Votre nom</string>
    <string name="votre_pr_nom">Votre prénom</string>
    <string name="votre_e_mail">Votre e-mail</string>
    <string name="modifier_votre_profil">Modifier votre profil</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="poids_kg">Poids (kg)</string>
    <string name="taille_cm">Taille (cm)</string>
    <string name="_53">53</string>
    <string name="_162">162</string>
    <string name="_2017">2017</string>
    <string name="ann_e_du_diagnostic">Année du diagnostic</string>
    <string name="groupe_sanguin">Groupe sanguin</string>
    <string name="a">A+</string>
    <string name="contact_d_urgence">Contact d\'urgence</string>
    <string name="marc">Marc</string>
    <string name="allergie_s">Allergie(s)</string>
    <string name="contre_indications">Contre-indications</string>
    <string name="ajouter_votre_dispositif_m_dical">Ajouter votre dispositif médical</string>
    <string name="modification_termin_e">Modification terminée</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="nom_m_dicament">Nom médicament :</string>
    <string name="dosage">Dosage (mg) :</string>
    <string name="fr_quence">Fréquence (nombre de fois/semaine) :</string>
    <string name="nombre_de_fois_par_jour">Nombre de fois par jour :</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajout_d_un_m_dicament">Ajout d\'un médicament</string>
    <string name="horaire_s">Horaire(s)</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="supprimer">Supprimer</string>
    <string name="dialog_new_med">New Med Dialog</string>
    <string name="dialog_view_med">View Med Dialog</string>
    <string name="ajouter_un_m_dicament">Ajouter un médicament</string>
    <string name="ajouter_un_m_decin">Ajouter un médecin</string>
    <string name="ville">Ville</string>
    <string name="recherchealiment" >Recherchez un aliment</string>
    <string name="ajoutsuivirepas" >Ajoutez le suivi d un repas</string>
    <string name="bienvenue_sur_votre_espace_personnel">Bienvenue sur votre espace personnel,</string>
    <string name="nous_sommes_le">Nous sommes le :</string>
    <string name="suivez_votre_m_dicamention">Suivez votre médicamentation :</string>
    <string name="encore_un_petit_effort_pour_atteindre_votre_objectif_journalier">Encore un petit effort pour atteindre votre objectif journalier !</string>
    <string name="ajout_d_un_sympt_me">Ajout d\'un symptôme</string>


    <string-array name="allergies">
        <item>Pollen</item>
        <item>Animaux</item>
        <item>Acariens</item>
    </string-array>
    <string-array name="fréquence">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="medicaments">
        <item>AKINETON LP</item>
        <item>BROMOCRIPTINE ZENTIVA</item>
        <item>DEPRENYL</item>
        <item>LEVODOPA</item>
        <item>MODOPAR </item>
        <item>NEUPRO </item>
        <item>OPRYMEA </item>
        <item>PARLODEL </item>
        <item>PRAMIPEXOLE BIOGARAN</item>
        <item>RASAGILINE ARROW</item>
        <item>REQUIP</item>
        <item>ROPINIROLE EG</item>
        <item>SIFROL</item>
        <item>STALEVO </item>
        <item>TRIVASTAL</item>
    </string-array>
    <string-array name="typeActivite">
        <item>Alpinisme LP</item>
        <item>Aquagym</item>
        <item>Arts martiaux</item>
        <item>Aviaton</item>
        <item>Aviron </item>
        <item>Badminton </item>
        <item>Bateau </item>
        <item>Canoe-kayak </item>
        <item>Chass/pêche</item>
        <item>Conduite</item>
        <item>Course à pied</item>
        <item>Course virtuelle</item>
        <item>Cyclisme</item>
        <item>Danse </item>
        <item>Deltaplane</item>
        <item>Equitation</item>
        <item>Escalade</item>
    </string-array>
    <string-array name="contreIndication">
        <item>IRM1</item>
        <item>IRM2</item>
        <item>IRM3</item>
        <item>IRM4</item>
        <item>IRM5</item>
        <item>IRM6</item>
    </string-array>
    <string-array name="momentRepas">
        <item>Petit-dejeuner</item>
        <item>Déjeuner</item>
        <item>Collation</item>
        <item>Dîner</item>

    </string-array>
    <string-array name="groupeSanguin">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="spécialitéMedecin">
        <item>Neurologue</item>
        <item>Medecin traitant</item>
        <item>Kinésithérapeute</item>
        <item>Orthophoniste</item>
        <item>Urologue </item>
        <item>Ergothérapeute </item>
    </string-array>
    <string-array name="jourSemaine">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>

</resources>
