<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/acceuil"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/acceuil_navbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profil"
        android:enabled="true"
        android:icon="@drawable/ic_perm_identity_white_24dp"
        android:title="@string/profil_navbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/evolution"
        android:enabled="true"
        android:icon="@drawable/ic_timeline_white_24dp"
        android:title="@string/evolution_navbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/evaluation"
        android:enabled="true"
        android:icon="@drawable/ic_assignment_turned_in_white_24dp"
        android:title="@string/eval_navbar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reseau"
        android:enabled="true"
        android:icon="@drawable/ic_supervisor_account_white_24dp"
        android:title="@string/reseau_navbar"
        app:showAsAction="ifRoom" />
</menu>