<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ajout_d_un_m_dicament"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/colorRougeViolet"
        android:textStyle="bold"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NomMed"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/noter_NomMed"
            android:imeOptions="actionNext"
            android:textSize="20sp"
            android:hint="@string/nom_m_dicament"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DosageMed"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/noter_DosageMed"
            android:imeOptions="actionNext"
            android:hint="@string/dosage"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FreqMed"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/noter_FreqMed"
            android:imeOptions="actionNext"
            android:hint="@string/fr_quence"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NombreFoisMed"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/noter_NombreFoisMed"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:hint="@string/nombre_de_fois_par_jour"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HoraireMed">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/noter_HoraireMed"
            android:imeOptions="actionNext"
            android:textSize="20sp"
            android:hint="@string/horaire_s" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRougeViolet"
            android:textSize="15sp"
            android:text="@string/sauvegarder"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/save"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRougeViolet"
            android:textSize="15sp"
            android:text="@string/supprimer"
            android:layout_marginLeft="10dp"
            android:id="@+id/delete"/>

    </RelativeLayout>

</LinearLayout>


