<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_nom_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/nom" />

    <EditText
        android:id="@+id/edit_prenom_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_nom_contact"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:hint="@string/pr_nom"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/edit_numTel_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_prenom_contact"
        android:hint="@string/num_ro_de_t_l_phone"
        android:singleLine="true"
        android:inputType="phone"
        android:layout_marginBottom="20dp" />

</RelativeLayout>