<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="407dp"
        android:layout_height="368dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:contentDescription="@string/montre"
        app:srcCompat="@drawable/image5"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boutonsuivant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/symbole34711"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginRight="20dp"
        android:onClick="onClick"
        android:clickable="true"
        android:text="@string/ignoreretape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="center"
        android:text="@string/activerbluetooth" />

</LinearLayout>