<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background">

        <TextView
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/bienvenue"
            android:textSize="30sp"
            android:textColor="@color/vertBleu"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votrenom"
            android:singleLine="true"
            android:layout_weight="0.04"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votreprenom"
            android:singleLine="true"
            android:layout_weight="0.04"
            android:layout_marginBottom="20dp"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.125"
            android:clickable="true"
            android:layout_gravity="center"
            >
            <Button
                android:id="@+id/boutonsuivantBienvenue"
                android:layout_width="300dp"
                android:layout_height="61dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"

                android:textSize="22sp"
                android:textColor="@color/blanc"
                android:text="@string/suivant"
                android:background="@drawable/symbole2" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>